Build: sdcc: fix tar path

--- a/.github/workflows/sdcc_build.yml
+++ b/.github/workflows/sdcc_build.yml
@@ -201,7 +201,7 @@ jobs:
         shell: bash
         run: |
           cd sdcc-${{ env.SDCC_VER }}
-          tar cvzf ../../${{ env.BUILD_PACKAGE_FILENAME }} sdcc/bin sdcc/libexec
+          tar cvzf ../${{ env.BUILD_PACKAGE_FILENAME }} sdcc/bin sdcc/libexec
           cd ..
           pwd
           ls -la
